--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,32 +6,33 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-header {
-  background-color: #404040;
-  padding: 1rem;
-}
-header a {
-  color: #ffffff;
-  font-weight: bold;
-  text-decoration: none;
+.site-container {
+  min-height: 100vh;
 }
 main {
-  padding: 1rem;
+  flex: 1;
+}
+.btn-primary {
+  background-color: #f0c040;
+  color: #000;
 }
 .products {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
+
 .product {
   border: 1px #404040 solid;
   margin: 1rem;
 }
 .product img {
   width: 100%;
-  max-width: 250px;
+  max-width: 400px;
 }
 .product-info {
   padding: 1rem;
+}
+.rating span {
+  color: #ffc000;
 }
